--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello, title</title>
+		<title>
+			Hello, title
+		</title>
 	</head>
 	<body>
-		Hello, world!
+		Hello, world
 	</body>
 </html>>
